fix: added z-index to vertical tabs

--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -4,6 +4,7 @@
   position: sticky;
 	top: 44px;
 	margin-bottom: 16px;
+	z-index: 100;
 }
 
 .tab-nav button {
